# brookie

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  alembic.ini  pyproject.toml
.github/workflows/: pre-commit.yml
alembic/: env.py
alembic/versions/: 0001_create_sessions_and_trips_tables.py  0001_create_trips_and_sessions_tables.py  b1bdb6939b24_create_sessions_and_trips_tables.py  ecd791ebef6f_create_sessions_and_trips_tables.py
brookie/: db.py  main.py
brookie-web/: package-lock.json  package.json
brookie/api/: sessions.py  trips.py
brookie/commands/: sessions.py  trips.py  utils.py
brookie/models/: __init__.py  session.py  trip.py
tests/: conftest.py  test_health.py  test_sessions.py  test_trips.py
