[project]
name = "brookie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Renaud Bourassa", email = "rbourassadenis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"

[tool.pyright]
include = ["brookie", "tests"]
venvPath = "."
venv = ".venv"
